# string-rosetta-rs

./: Cargo.toml  README.md
.github/workflows/: audit.yml  ci.yml
benches/: access.rs  clone.rs  eq.rs  fixture.rs  new.rs  self_eq.rs
runs/2022-03-25/access/report/: index.html
runs/2022-03-25/new/report/: index.html
runs/2022-03-25/report/: index.html
runs/2022-03-30/access_static/report/: index.html
runs/2022-03-30/clone/report/: index.html
runs/2022-03-30/clone_static/report/: index.html
runs/2022-03-30/new_static/report/: index.html
runs/2022-03-30/report/: index.html
runs/2023-08-16/access/report/: index.html
runs/2023-08-16/clone/report/: index.html
runs/2023-08-16/new/report/: index.html
runs/2023-08-16/report/: index.html
runs/2023-08-17/access/report/: index.html
runs/2023-08-17/new/report/: index.html
runs/2023-08-17/report/: index.html
runs/2023-10-10/access/report/: index.html
runs/2023-10-10/access_static/report/: index.html
runs/2023-10-10/clone/report/: index.html
runs/2023-10-10/clone_static/report/: index.html
runs/2023-10-10/eq/report/: index.html
runs/2023-10-10/eq_static/report/: index.html
runs/2023-10-10/new_static/report/: index.html
runs/2025-06-17/access_static/report/: index.html
runs/2025-06-17/clone_static/report/: index.html
runs/2025-06-17/new_static/report/: index.html
runs/2025-06-17/self_eq/report/: index.html
runs/2025-06-17/self_eq_static/report/: index.html
runs/2025-08-29/access/report/: index.html
runs/2026-03-09/report/: index.html
src/: main.rs
(+15 files in other folders)
