[package]
name = "string-benchmarks-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
compact_str = "0.3.1"
flexstr = "0.9.1"
kstring = "1.0.6"
smartstring = "1.0.1"
smol_str = "0.1.21"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "new"
harness = false

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "access"
harness = false

[profile.release]
debug = 1
