[package]
name = "string-benchmarks-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
compact_str = "0.3.2"
flexstr = "0.9.2"
kstring = "2.0.0"
smartstring = "1.0.1"
smol_str = "0.1.23"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "new"
harness = false

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "access"
harness = false

[profile.release]
debug = 1
