[package]
name = "string-benchmarks-rs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arcstr = "1.1.5"
compact_str = "0.9"
ecow = "0.2.2"
flexstr = "0.9.2"
hipstr = "0.7.0"
imstr = "0.2.0"
kstring = "2.0.0"
smartstring = "1.0.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "new"
harness = false

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "access"
harness = false

[[bench]]
name = "self_eq"
harness = false

[profile.release]
debug = 1
